ARROW-7063: [C++][Python] Add metadata output and toggle in PrettyPrint, add pyarrow.Schema.to_string, disable metadata output by default

There was a temporary hack to suppress outputting the metadata in ARROW-7080 so this is a more complete working over, and adding metadata output. I disabled the default metadata output in Python (which is often more of a distraction than anything) since it seems several others agreed that was the way to go

Closes #6472 from wesm/ARROW-7063 and squashes the following commits:

38e7a9cd77 <Wes McKinney> Add show_metadata option to PrettyPrintOptions, add metadata output to PrettyPrint. Add Python Schema.to_string option, disable metadata output by default

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>